--- a/language/en_US.json
+++ b/language/en_US.json
@@ -19,7 +19,7 @@
             "autolaunch": "Autolaunch",
             "show": "Show Presence",
             "hideOnPause": "Hide Presence on pause",
-            "showAlbumCover": "Show album art when available",
+            "showAlbumCover": "Show artwork of the album",
             "performanceMode": "Performance Mode",
             "colorTheme": "Preferred color theme",
             "language": "App language",
